--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
     "rich>=13.0.0",
     "requests>=2.32.0",
     "pyarrow>=18.0.0",
+    "pyportfolioopt>=1.5.5",
+    "cvxpy>=1.4.0",
+    "scikit-learn>=1.3.0",
 ]
 
 [project.optional-dependencies]
@@ -23,9 +26,15 @@ dev = [
     "ruff>=0.8.0",
 ]
 
+[project.scripts]
+dcf = "dcf:main"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
 
 [tool.ruff]
 line-length = 120
