--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ dependencies = [
     "pyportfolioopt>=1.5.5",
     "cvxpy>=1.4.0",
     "scikit-learn>=1.3.0",
+    "fredapi>=0.5.0",
+    "python-dotenv>=1.0.0",
+    "openpyxl>=3.1.0",
+    "xlrd>=2.0.1",
 ]
 
 [project.optional-dependencies]
