--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "openpyxl>=3.1.0",
     "xlrd>=2.0.1",
+    "pydantic>=2.12.5",
 ]
 
 [project.optional-dependencies]
