feat: Add PEG ratio and live peer multiples comparison
- Added PEG ratio calculation (Peter Lynch metric: PEG < 1.0 = undervalued)
- Created SECTOR_PEERS dictionary with 10-15 peers per sector (11 sectors)
- Implemented get_live_peer_multiples() with parallel fetching and caching
- Enhanced RelativeMetrics dataclass with PEG, peer ranges, and peer count
- Updated CompanyData with peg_ratio, trailing_eps, forward_eps fields
- Modified RelativeValuationEngine.analyze() to use live peer data vs static benchmarks
- Updated CLI display to show peer ranges [min-max] alongside median
- Added PEG classification: EXTREMELY CHEAP/UNDERVALUED/FAIR/EXPENSIVE/OVERVALUED
- Leverages existing parallel fetching infrastructure (no perf penalty)
- Peer multiples cached for 24 hours for performance
- Now displays 'Multiples vs Sector (X peers)' with real market data
- Tested across Technology, Healthcare, Financial Services sectors

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,8 @@ htmlcov/
 # Environment secrets
 config/secrets.env
 config/secrets.env.backup
+
+
+# .github
+.github/
+.github/copilot-instructions.md
