feat(backtest): implement data collection infrastructure
- Create backtest module structure (config, data_loader)
- Build parquet-based caching system for historical data
- Add bulk download with rate limiting and retry logic
- Implement forward returns calculation (1m, 3m, 6m, 1y, 3y, 5y)
- Add progress tracking with tqdm

Features:
- Efficient batch downloading (10 stocks at a time)
- Exponential backoff retry logic
- Per-ticker parquet caching to avoid re-downloads
- Metadata tracking for cache freshness
- Support for prices, financials, and market data

Pilot Test Results:
✅ Downloaded 5 stocks × 1509 trading days (2019-2024)
✅ Forward returns pre-calculated for all horizons
✅ 0% missing data across all stocks
✅ Caching working correctly - instant reload

Next Steps:
- Build walk-forward backtest engine
- Implement performance metrics (IC, Sharpe, quintiles)
- Run pilot backtest on 5 stocks

Dependencies added: tqdm>=4.66.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "openpyxl>=3.1.0",
     "xlrd>=2.0.1",
     "pydantic>=2.12.5",
+    "tqdm>=4.66.0",
 ]
 
 [project.optional-dependencies]
