chore: exclude data folder and clean up repo
- Exclude entire data/ folder from git (545MB, 681 files)
- Users regenerate via download_full_history.py (~30 seconds)
- Add data management section to README
- Remove temporary analysis scripts:
  - analyze_jnj_monte_carlo.py (JNJ-specific analysis)
  - validate_jnj_growth.py (JNJ validation)
- Keep repo lightweight and focused on code

--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,8 @@ env/
 .DS_Store
 Thumbs.db
 
-# Data and cache
-data/cache/
+# Data and cache (entire folder - users regenerate via download scripts)
+data/
 *.csv
 *.xlsx
 benchmark_run.log
